@startuml
entity Users
entity Templates
entity Certificates
entity IssuerApplications

Users ||--o{ Templates : "memiliki"
Users ||--o{ Certificates : "menerbitkan"
Users ||--o{ Certificates : "menerima"
Templates ||--o{ Certificates : "digunakan oleh"
Users ||--o{ IssuerApplications : "mengajukan"
@enduml 